Corrected center alignment of img

--- a/newAmsterdam.css
+++ b/newAmsterdam.css
@@ -13,6 +13,8 @@ html {
     object-fit: cover;
     border: 5px blue solid;
     margin-top: 10px;
+    align-items: center;
+
 }
 
 main {
